; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_dn_sched_fifo.c_fifo_new_sched.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_dn_sched_fifo.c_fifo_new_sched.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dn_sch_inst = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }
%struct.dn_queue = type { i32, %struct.dn_sch_inst*, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@DN_QUEUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dn_sch_inst*)* @fifo_new_sched to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fifo_new_sched(%struct.dn_sch_inst* %0) #0 {
  %2 = alloca %struct.dn_sch_inst*, align 8
  %3 = alloca %struct.dn_queue*, align 8
  store %struct.dn_sch_inst* %0, %struct.dn_sch_inst** %2, align 8
  %4 = load %struct.dn_sch_inst*, %struct.dn_sch_inst** %2, align 8
  %5 = getelementptr inbounds %struct.dn_sch_inst, %struct.dn_sch_inst* %4, i64 1
  %6 = bitcast %struct.dn_sch_inst* %5 to %struct.dn_queue*
  store %struct.dn_queue* %6, %struct.dn_queue** %3, align 8
  %7 = load %struct.dn_queue*, %struct.dn_queue** %3, align 8
  %8 = getelementptr inbounds %struct.dn_queue, %struct.dn_queue* %7, i32 0, i32 2
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* @DN_QUEUE, align 4
  %11 = call i32 @set_oid(i32* %9, i32 %10, i32 24)
  %12 = load %struct.dn_sch_inst*, %struct.dn_sch_inst** %2, align 8
  %13 = load %struct.dn_queue*, %struct.dn_queue** %3, align 8
  %14 = getelementptr inbounds %struct.dn_queue, %struct.dn_queue* %13, i32 0, i32 1
  store %struct.dn_sch_inst* %12, %struct.dn_sch_inst** %14, align 8
  %15 = load %struct.dn_sch_inst*, %struct.dn_sch_inst** %2, align 8
  %16 = getelementptr inbounds %struct.dn_sch_inst, %struct.dn_sch_inst* %15, i32 0, i32 0
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.dn_queue*, %struct.dn_queue** %3, align 8
  %21 = getelementptr inbounds %struct.dn_queue, %struct.dn_queue* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 8
  ret i32 0
}

declare dso_local i32 @set_oid(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
